--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
     "build": "vue-cli-service build",
     "test:unit": "vue-cli-service test:unit",
     "test:e2e": "vue-cli-service test:e2e",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "start": "npm run serve"
   },
   "dependencies": {
     "axios": "^0.21.0",
     "core-js": "^3.6.5",
     "element-plus": "^1.0.1-beta.0",
+    "js-cookie": "^2.2.1",
     "nprogress": "^0.2.0",
     "vue": "^3.0.0",
     "vue-progressbar": "^0.7.5",
