--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "dependencies": {
     "axios": "^0.21.0",
     "core-js": "^3.6.5",
-    "element-plus": "^1.0.1-beta.0",
+    "dayjs": "^1.9.7",
+    "element-plus": "^1.0.1-beta.10",
     "js-cookie": "^2.2.1",
     "nprogress": "^0.2.0",
     "vue": "^3.0.0",
@@ -23,6 +24,7 @@
   },
   "devDependencies": {
     "@types/jest": "^24.0.19",
+    "@types/js-cookie": "^2.2.6",
     "@types/nprogress": "^0.2.0",
     "@typescript-eslint/eslint-plugin": "^2.33.0",
     "@typescript-eslint/parser": "^2.33.0",
@@ -64,7 +66,9 @@
     "parserOptions": {
       "ecmaVersion": 2020
     },
-    "rules": {},
+    "rules": {
+      "no-empty-function": "off"
+    },
     "overrides": [
       {
         "files": [
